--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,62 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Cryptomania.</title>
+  <meta
+      name="description"
+      content="CryptoTracker is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time and add them to your watchlist aswell."
+    />
+    <link rel="icon" href="bitcoin.png" />
+    <meta charset="utf-8" />
+    <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <link rel="canonical" href="https://cryptotracker-project.netlify.app/" />
+    <meta
+      name="keywords"
+      content="CryptoTracker., crypto, tracker, crypto dashboard, dashboard, crypto tracking"
+    />
+    <meta name="author" content="Abhay Singh" />
+
+    <meta name="twitter:card" content="https://i.ibb.co/x6FTCCy/logo.png" />
+    <meta
+      name="twitter:site"
+      content="https://cryptotracker-project.netlify.app/"
+    />
+    <meta name="twitter:title" content="CryptoTracker." />
+    <meta
+      name="twitter:description"
+      content="CryptoTracker is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
+    />
+    <meta
+      name="twitter:image:src"
+      content="https://i.ibb.co/x6FTCCy/logo.png"
+    />
+    <meta name="twitter:image:alt" content="Crypto Tracker Logo" />
+    <meta
+      property="og:url"
+      content="https://cryptotracker-project.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="CryptoTracker." />
+    <meta property="og:image" content="https://i.ibb.co/x6FTCCy/logo.png" />
+    <meta
+      property="og:description"
+      content="CryptoTracker is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
+    />
+    <meta property="og:site_name" content="CryptoTracker." />
+
+    <meta itemprop="name" content="CryptoTracker." />
+    <meta
+      itemprop="description"
+      content="CryptoTracker is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
+    />
+    <meta itemprop="image" content="https://i.ibb.co/x6FTCCy/logo.png" />
   <div id="particles-js"></div>
 
   <script src="particles.js"></script>
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Crypto Mania</title>
 </head>
 
 <body>
